--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore:
   flutter:
     sdk: flutter
 
@@ -39,6 +40,7 @@ dependencies:
   fluttertoast: ^8.0.9
   http: ^0.13.4
   flutter_launcher_icons: ^0.9.2
+  firebase_core: ^1.16.0
 
 dev_dependencies:
   flutter_test:
